--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-hello
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
+    <head>
+        <title>Manuel E. Gutierrez</title>
+        <meta name="description" content="Manuel E. is a Software developer, simplicity lover, architect padawan, performance obsessed." />
+        <style type="text/css">
+            body {
+                margin: 30px;
+                font-family: georgia, times, serif;
+                text-align: center;
+                color: black;
+                background: white;
+            }
+            .small {
+                font-size: 1em;
+                color: #555;
+            }
+            .large {
+                font-size: 2em;
+            }
+            a {
+                color: black;
+            }
+            .footer {
+                font-size: 1em;
+                font-style: italic;
+                color: #555;
+                line-height: 1.5em;
+            }
+        </style>
+    </head>
+    <body>
+        <p class="small">xr09 real id is</p>
+        <p class="large">Manuel E. Gutierrez</p>
+        <p class="small">who?</p>
+        <p class="large">Software developer, simplicity lover, architect padawan, performance obsessed.</p>
+        <p class="small">contact</p>
+        <p class="large">Create an issue at any repo in <a href="https://github.com/xr09/">github.com/xr09 </a></p>
+        <p class="footer">xr09 2013</p>
+    </body>
+</html>
+
+
