--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             }
             .small {
                 font-size: 1em;
-                color: #555;
+                color: #efefef;
             }
             .large {
                 font-size: 2em;
@@ -35,9 +35,11 @@
         <p class="large">Manuel E. Gutierrez</p>
         <p class="small">who?</p>
         <p class="large">Software developer, simplicity lover, architect padawan, performance obsessed.</p>
+        <p class="small">goals?</p>
+        <p class="large">Good working software for the masses.</p>
         <p class="small">contact</p>
         <p class="large">Create an issue at any repo in <a href="https://github.com/xr09/">github.com/xr09 </a></p>
-        <p class="footer">xr09 2013</p>
+        <p class="footer">Manuel Gutierrez 2013</p>
     </body>
 </html>
 
