--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             }
             .small {
                 font-size: 1em;
-                color: #efefef;
+                color: gray;
             }
             .large {
                 font-size: 2em;
