--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p class="small">Who?</p>
         <p class="large">Software developer, simplicity lover, architect padawan, performance obsessed.</p>
         <p class="small">Goals?</p>
-        <p class="large">Good working software for the masses.</p>
+        <p class="large">Create good working software.</p>
         <p class="small">Contact</p>
         <p class="large">My <a href="http://commonsenseapplied.wordpress.com/">blog at wordpress</a></p>
         <p class="large">Or create an issue at any repo in <a href="https://github.com/xr09/">github.com/xr09 </a></p>
