--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <p class="small">xr09 real id is</p>
         <p class="large">Manuel E. Gutierrez</p>
         <p class="small">Who?</p>
-        <p class="large">Software developer, simplicity lover, architect padawan, performance obsessed.</p>
+        <p class="large">Software developer, simplicity lover, architect padawan,
+        <br/> performance obsessed.</p>
         <p class="small">Goals?</p>
         <p class="large">Create good working software.</p>
         <p class="small">Contact</p>
