--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <br/> performance obsessed.</p>
         <p class="small">Goals?</p>
         <p class="large">Create good working software.</p>
+        <p class="small">Skills?</p>
+        <p class="large">Web &amp; desktop programming, sys admin, UI, UX, IA... JOAT mentality.</p>
         <p class="small">Contact</p>
         <p class="large">My <a href="http://commonsenseapplied.wordpress.com/">blog at wordpress</a></p>
         <p class="footer">Manuel Gutierrez 2013</p>
