--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p class="large">Web &amp; desktop programming, sys admin, UI, UX, IA... JOAT mentality.</p>
         <p class="small">Contact</p>
         <p class="large">My <a href="http://commonsenseapplied.wordpress.com/">blog at wordpress</a></p>
-        <p class="small">Most of the time is at</p>
+        <p class="small">Stackoverflow profile</p>
         <p><a href="http://stackoverflow.com/users/1279003/dhunter">
 <img src="http://stackoverflow.com/users/flair/1279003.png?theme=clean" width="208" height="58" alt="profile for dhunter at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for dhunter at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
 </a></p>
