--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <p class="large">Web &amp; desktop programming, sys admin, architecture, UX, IA.</p>
         <p class="small">Contact</p>
         <p class="large">My <a href="http://commonsenseapplied.wordpress.com/">blog at wordpress</a></p>
+        <p class="large">My code at <a href="http://github.com/xr09/">github</a></p>
+        <p class="large">My code at <a href="http://bitbucket.org/xr09/">bitbucket</a></p>
         <p class="footer">Manuel Gutierrez 2013</p>
     </body>
 </html>
