--- a/pages/patch.html
+++ b/pages/patch.html
@@ -333,14 +333,12 @@ ul.auto-toc {
 </style>
 
 
-
 </head>
 <body>
 
 <div class="container">
 
-<div class="span12">
-
+<div class="span10 offset1">
 
 <div class="document" id="how-to-obtain-the-linux-kernel-the-smart-way">
 <h1 class="title">How to obtain the Linux kernel the smart way?</h1>
