--- a/pages/patch.html
+++ b/pages/patch.html
@@ -342,7 +342,7 @@ ul.auto-toc {
 <div class="span10 offset1">
 
 <div class="document" id="how-to-obtain-the-linux-kernel-the-smart-way">
-<h1 class="title">How to obtain the Linux kernel the smart way?</h1>
+<h1 class="title">How to get the Linux kernel the smart way</h1>
 
 <!-- How to play with patch and the Linux kernel? -->
 <p>Some of us love living on the edge, use the last stable kernel release, no problem, go to kernel.org, download the file and good to go, compile.</p>
