--- a/pages/patch.html
+++ b/pages/patch.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>How to obtain the Linux kernel the smart way?</title>
+<title>How to get the Linux kernel the smart way</title>
 
 <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
 
