--- a/categories.html
+++ b/categories.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,16 +23,9 @@
       </div>
       <div class=separator></div>                
         <div class=body>
-        
-      <div class=entry-overview>
-      <div class=date>Aug 19, 2013</div>
-      <div class=detail>
-          <h1><a href="http://xr09.github.io/test/first-post.html">First Post</a></h1>
-          <div class=summary><p> Checking out pelican.</p></div>
-      </div>
-    </div>
-  
-
+        <ul>
+    <li><a href="http://xr09.github.io/test/category/test.html">test</a></li>
+</ul>
         </div>
         
                     <div class=footer>
