--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -6,19 +6,19 @@
     
     <title> About me | Common Sense Applied </title>
 
-    <link rel="stylesheet" href="http://xr09.github.io/test/theme/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="http://xr09.github.io/test/theme/css/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="http://xr09.github.io/test/theme/css/font-awesome.css" type="text/css"/>
+    <link rel="stylesheet" href="http://xr09.github.io/theme/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="http://xr09.github.io/theme/css/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="http://xr09.github.io/theme/css/font-awesome.css" type="text/css"/>
   </head>
   <body>
     <div class=container>
                     
       <div class=navigation>
         <ul>
-                      <li><a href="http://xr09.github.io/test/index.html">Blog</a> </li>
-                      <li><a href="http://xr09.github.io/test/archives.html">Archive</a> </li>
-                      <li><a href="http://xr09.github.io/test/tags.html">Tags</a> </li>
-                      <li><a href="http://xr09.github.io/test/pages/about-me.html">About</a> </li>
+                      <li><a href="http://xr09.github.io/index.html">Blog</a> </li>
+                      <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
+                      <li><a href="http://xr09.github.io/tags.html">Tags</a> </li>
+                      <li><a href="http://xr09.github.io/pages/about-me.html">About</a> </li>
                   </ul>
       </div>
       <div class=separator></div>                
@@ -48,7 +48,7 @@
         <a href="http://twitter.com/xr09" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
         <a href=""><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
         <a href="http://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
-        <a href="http://xr09.github.io/test/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
+        <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
       </ul>
     </div>
   </p>
