--- a/pages/patch.html
+++ b/pages/patch.html
@@ -373,7 +373,7 @@ xzcat ../patch-3.8.7.xz | patch -R -p1
 xzcat ../patch-3.8.8.xz | patch -p1
 </pre>
 
-<img src="../static/images/kernel-patch.jpg" alt="Patching the kernel" />
+<img src="http://xr09.github.io/static/images/kernel-patch.jpg" alt="Patching the kernel" />
 
 <p>Eureka! We just got 3.8.8 without wasting that much bandwith.</p>
 <p>Houston, we'ready to compile.</p>
