--- a/archives.html
+++ b/archives.html
@@ -27,6 +27,7 @@
 <h2>2013</h2>
 <h3>October</h3>
 <ul>
+  <li><a href="http://xr09.github.io/bash-rolodex.html">Bash Rolodex</a></li>
   <li><a href="http://xr09.github.io/sed-is-unix.html">sed is unix</a></li>
   <li><a href="http://xr09.github.io/pelican-looks-great.html">Pelican looks great</a></li>
 </ul>
