--- a/sed-is-unix.html
+++ b/sed-is-unix.html
@@ -12,16 +12,18 @@
   </head>
   <body>
     <div class=container>
-                    
-      <div class=navigation>
-        <ul>
-          <li><a href="http://xr09.github.io/">DevPad</a> </li>
-                      <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
-                      <li><a href="http://xr09.github.io/tags.html">Tags</a> </li>
-                      <li><a href="http://xr09.github.io/pages/about.html">About</a> </li>
-                  </ul>
-      </div>
-      <div class=separator></div>                
+                    <div class="header">
+    <a href="http://xr09.github.io/">DevPad</a> <span class="muted">just code the damn thing</span>
+</div>
+
+<div class=navigation>
+    <ul>
+                    <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
+                    <li><a href="http://xr09.github.io/tags.html">Tags</a> </li>
+                    <li><a href="http://xr09.github.io/pages/about.html">About</a> </li>
+            </ul>
+</div>
+<div class=separator></div>                
         <div class=body>
             <h1 class="title"> sed is unix</h1>
     <p class=date> Thu 03 October 2013 </p>
