--- a/tags.html
+++ b/tags.html
@@ -13,7 +13,7 @@
   <body>
     <div class=container>
                     <div class="header">
-    <a href="http://xr09.github.io/">DevPad</a> <span class="muted">just code the damn thing</span>
+    <a href="http://xr09.github.io/">DevPad</a> <span class="muted">building things for fun</span>
 </div>
 
 <div class=navigation>
@@ -28,9 +28,9 @@
         <h1> Tags </h1>
 <ul class=tagcloud>
             <li class="tag-4"><a href="http://xr09.github.io/tag/sed.html">sed</a></li>
-            <li class="tag-4"><a href="http://xr09.github.io/tag/pelican.html">pelican</a></li>
             <li class="tag-4"><a href="http://xr09.github.io/tag/rolodex.html">rolodex</a></li>
             <li class="tag-1"><a href="http://xr09.github.io/tag/unix.html">unix</a></li>
+            <li class="tag-4"><a href="http://xr09.github.io/tag/pelican.html">pelican</a></li>
             <li class="tag-4"><a href="http://xr09.github.io/tag/bash.html">bash</a></li>
     </ul>
         </div>
