--- a/archives.html
+++ b/archives.html
@@ -6,21 +6,21 @@
     
     <title> Archive | DevPad </title>
 
-    <link rel="stylesheet" href="http://192.168.15.149:8000/theme/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="http://192.168.15.149:8000/theme/css/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="http://192.168.15.149:8000/theme/css/font-awesome.css" type="text/css"/>
+    <link rel="stylesheet" href="http://xr09.github.io/theme/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="http://xr09.github.io/theme/css/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="http://xr09.github.io/theme/css/font-awesome.css" type="text/css"/>
   </head>
   <body>
     <div class=container>
                     <div class="header">
-    <a href="http://192.168.15.149:8000/">DevPad</a> <span class="muted">building things for fun</span>
+    <a href="http://xr09.github.io/">DevPad</a> <span class="muted">building things for fun</span>
 </div>
 
 <div class=navigation>
     <ul>
-                    <li><a href="http://192.168.15.149:8000/archives.html">Archive</a> </li>
-                    <li><a href="http://192.168.15.149:8000/tags.html">Tags</a> </li>
-                    <li><a href="http://192.168.15.149:8000/pages/about.html">About</a> </li>
+                    <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
+                    <li><a href="http://xr09.github.io/tags.html">Tags</a> </li>
+                    <li><a href="http://xr09.github.io/pages/about.html">About</a> </li>
             </ul>
 </div>
 <div class=separator></div>                
@@ -30,9 +30,9 @@
 <h2>2013</h2>
 <h3>October</h3>
 <ul>
-  <li><a href="http://192.168.15.149:8000/bash-rolodex.html">Bash Rolodex</a></li>
-  <li><a href="http://192.168.15.149:8000/sed-is-unix.html">sed is unix</a></li>
-  <li><a href="http://192.168.15.149:8000/pelican-looks-great.html">Pelican looks great</a></li>
+  <li><a href="http://xr09.github.io/bash-rolodex.html">Bash Rolodex</a></li>
+  <li><a href="http://xr09.github.io/sed-is-unix.html">sed is unix</a></li>
+  <li><a href="http://xr09.github.io/pelican-looks-great.html">Pelican looks great</a></li>
 </ul>
         </div>
         
@@ -52,7 +52,7 @@
             <li><i class="icon-envelope icon-large"></i> </li>
         </a>        
         <a href="http://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
-        <a href="http://192.168.15.149:8000/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
+        <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
       </ul>
     </div>
   </p>
