--- a/tags.html
+++ b/tags.html
@@ -6,32 +6,32 @@
     
     <title> Tags | DevPad </title>
 
-    <link rel="stylesheet" href="http://192.168.15.149:8000/theme/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="http://192.168.15.149:8000/theme/css/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="http://192.168.15.149:8000/theme/css/font-awesome.css" type="text/css"/>
+    <link rel="stylesheet" href="http://xr09.github.io/theme/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="http://xr09.github.io/theme/css/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="http://xr09.github.io/theme/css/font-awesome.css" type="text/css"/>
   </head>
   <body>
     <div class=container>
                     <div class="header">
-    <a href="http://192.168.15.149:8000/">DevPad</a> <span class="muted">building things for fun</span>
+    <a href="http://xr09.github.io/">DevPad</a> <span class="muted">building things for fun</span>
 </div>
 
 <div class=navigation>
     <ul>
-                    <li><a href="http://192.168.15.149:8000/archives.html">Archive</a> </li>
-                    <li><a href="http://192.168.15.149:8000/tags.html">Tags</a> </li>
-                    <li><a href="http://192.168.15.149:8000/pages/about.html">About</a> </li>
+                    <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
+                    <li><a href="http://xr09.github.io/tags.html">Tags</a> </li>
+                    <li><a href="http://xr09.github.io/pages/about.html">About</a> </li>
             </ul>
 </div>
 <div class=separator></div>                
         <div class=body>
         <h1> Tags </h1>
 <ul class=tagcloud>
-            <li class="tag-4"><a href="http://192.168.15.149:8000/tag/pelican.html">pelican</a></li>
-            <li class="tag-4"><a href="http://192.168.15.149:8000/tag/rolodex.html">rolodex</a></li>
-            <li class="tag-1"><a href="http://192.168.15.149:8000/tag/unix.html">unix</a></li>
-            <li class="tag-4"><a href="http://192.168.15.149:8000/tag/sed.html">sed</a></li>
-            <li class="tag-4"><a href="http://192.168.15.149:8000/tag/bash.html">bash</a></li>
+            <li class="tag-4"><a href="http://xr09.github.io/tag/sed.html">sed</a></li>
+            <li class="tag-4"><a href="http://xr09.github.io/tag/pelican.html">pelican</a></li>
+            <li class="tag-4"><a href="http://xr09.github.io/tag/rolodex.html">rolodex</a></li>
+            <li class="tag-1"><a href="http://xr09.github.io/tag/unix.html">unix</a></li>
+            <li class="tag-4"><a href="http://xr09.github.io/tag/bash.html">bash</a></li>
     </ul>
         </div>
         
@@ -51,7 +51,7 @@
             <li><i class="icon-envelope icon-large"></i> </li>
         </a>        
         <a href="http://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
-        <a href="http://192.168.15.149:8000/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
+        <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
       </ul>
     </div>
   </p>
