--- a/drafts/symfony2-nginx-php-fpm.html
+++ b/drafts/symfony2-nginx-php-fpm.html
@@ -18,6 +18,7 @@
 
 <div class=navigation>
     <ul>
+                    <li><a href="http://xr09.github.io/pages/projects.html">Projects</a> </li>
                     <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
                     <li><a href="http://xr09.github.io/tags.html">Tags</a> </li>
                     <li><a href="http://xr09.github.io/pages/about.html">About</a> </li>
