--- a/tags.html
+++ b/tags.html
@@ -18,6 +18,7 @@
 
 <div class=navigation>
     <ul>
+                    <li><a href="http://xr09.github.io/pages/projects.html">Projects</a> </li>
                     <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
                     <li><a href="http://xr09.github.io/tags.html">Tags</a> </li>
                     <li><a href="http://xr09.github.io/pages/about.html">About</a> </li>
@@ -27,10 +28,10 @@
         <div class=body>
         <h1> Tags </h1>
 <ul class=tagcloud>
+            <li class="tag-1"><a href="http://xr09.github.io/tag/unix.html">unix</a></li>
+            <li class="tag-4"><a href="http://xr09.github.io/tag/rolodex.html">rolodex</a></li>
             <li class="tag-4"><a href="http://xr09.github.io/tag/sed.html">sed</a></li>
             <li class="tag-4"><a href="http://xr09.github.io/tag/pelican.html">pelican</a></li>
-            <li class="tag-4"><a href="http://xr09.github.io/tag/rolodex.html">rolodex</a></li>
-            <li class="tag-1"><a href="http://xr09.github.io/tag/unix.html">unix</a></li>
             <li class="tag-4"><a href="http://xr09.github.io/tag/bash.html">bash</a></li>
     </ul>
         </div>
