--- a/drafts/optimization-patterns.html
+++ b/drafts/optimization-patterns.html
@@ -12,21 +12,21 @@
   </head>
   <body>
     <div class=container>
-                    <div class="header">
-    <a href="http://xr09.github.io/">DevPad</a> <span class="muted">building things for fun</span>
+<div class="header">
+    <a href="http://xr09.github.io/">DevPad</a> <span class="muted">clean code, good karma</span>
 </div>
 
 <div class=navigation>
     <ul>
-                    <li><a href="http://xr09.github.io/pages/projects.html">Projects</a> </li>
-                    <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
-                    <li><a href="http://xr09.github.io/tags.html">Tags</a> </li>
-                    <li><a href="http://xr09.github.io/pages/about.html">About</a> </li>
-            </ul>
+            <li><a href="http://xr09.github.io/pages/projects.html">Projects</a> </li>
+            <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
+            <li><a href="http://xr09.github.io/tags.html">Tags</a> </li>
+            <li><a href="http://xr09.github.io/pages/about.html">About</a> </li>
+    </ul>
 </div>
-<div class=separator></div>                
+<div class=separator></div>        
         <div class=body>
-            <h1 class="title"> Optimization patterns</h1>
+    <h1 class="title"> Optimization patterns</h1>
     <p class=date> Thu 19 September 2013 </p>
     <div class="section" id="optimize-everything">
 <h2>Optimize Everything</h2>
@@ -43,26 +43,13 @@ Optimize Optimize Optimize Optimize Optimize Optimize</p>
 </div>
 
     
-            <p class=tags>This entry was tagged as
-            <a href="http://xr09.github.io/tag/optimization.html">optimization</a>
-            <a href="http://xr09.github.io/tag/patterns.html">patterns</a>
-          </p>
-                <div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'devpad'; // required: replace example with your forum shortname
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>            </div>
+    <p class=tags>This entry was tagged as
+      <a href="http://xr09.github.io/tag/optimization.html">optimization</a>
+      <a href="http://xr09.github.io/tag/patterns.html">patterns</a>
+    </p>
+        </div>
         
-                    <div class=footer>
+<div class=footer>
   <p>&copy; Copyright <script language="JavaScript">var date = new Date(); document.write(date.getFullYear());</script> by Manuel Gutierrez</p>
   <p > Powered by <a href="http://pypi.python.org/pypi/pelican/" target="_blank">Pelican</a>.  
     <a href="https://github.com/fjavieralba/flasky">Theme</a>  by <a href="http://fjavieralba.com">fjavieralba</a>
@@ -82,6 +69,6 @@ Optimize Optimize Optimize Optimize Optimize Optimize</p>
       </ul>
     </div>
   </p>
-</div>            </div>
-          </body>
+</div>    </div>
+  </body>
 </html>
