--- a/categories.html
+++ b/categories.html
@@ -12,27 +12,27 @@
   </head>
   <body>
     <div class=container>
-                    <div class="header">
-    <a href="http://xr09.github.io/">DevPad</a> <span class="muted">building things for fun</span>
+<div class="header">
+    <a href="http://xr09.github.io/">DevPad</a> <span class="muted">clean code, good karma</span>
 </div>
 
 <div class=navigation>
     <ul>
-                    <li><a href="http://xr09.github.io/pages/projects.html">Projects</a> </li>
-                    <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
-                    <li><a href="http://xr09.github.io/tags.html">Tags</a> </li>
-                    <li><a href="http://xr09.github.io/pages/about.html">About</a> </li>
-            </ul>
+            <li><a href="http://xr09.github.io/pages/projects.html">Projects</a> </li>
+            <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
+            <li><a href="http://xr09.github.io/tags.html">Tags</a> </li>
+            <li><a href="http://xr09.github.io/pages/about.html">About</a> </li>
+    </ul>
 </div>
-<div class=separator></div>                
+<div class=separator></div>        
         <div class=body>
-        <ul>
+<ul>
     <li><a href="http://xr09.github.io/category/os.html">os</a></li>
     <li><a href="http://xr09.github.io/category/dev.html">dev</a></li>
 </ul>
         </div>
         
-                    <div class=footer>
+<div class=footer>
   <p>&copy; Copyright <script language="JavaScript">var date = new Date(); document.write(date.getFullYear());</script> by Manuel Gutierrez</p>
   <p > Powered by <a href="http://pypi.python.org/pypi/pelican/" target="_blank">Pelican</a>.  
     <a href="https://github.com/fjavieralba/flasky">Theme</a>  by <a href="http://fjavieralba.com">fjavieralba</a>
@@ -52,6 +52,6 @@
       </ul>
     </div>
   </p>
-</div>            </div>
-          </body>
+</div>    </div>
+  </body>
 </html>
