--- a/tags.html
+++ b/tags.html
@@ -28,11 +28,12 @@
         <div class=body>
 <h1> Tags </h1>
 <ul class=tagcloud>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/sed.html">sed</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/rolodex.html">rolodex</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/python.html">python</a></li>
+        <li class="tag-1"><a href="http://xr09.github.io/tag/unix.html">unix</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/sed.html">sed</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/pelican.html">pelican</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/bash.html">bash</a></li>
-        <li class="tag-1"><a href="http://xr09.github.io/tag/unix.html">unix</a></li>
 </ul>
         </div>
         
