--- a/categories.html
+++ b/categories.html
@@ -27,6 +27,7 @@
 <div class=separator></div>        
         <div class=body>
 <ul>
+    <li><a href="http://xr09.github.io/category/server.html">server</a></li>
     <li><a href="http://xr09.github.io/category/os.html">os</a></li>
     <li><a href="http://xr09.github.io/category/dev.html">dev</a></li>
 </ul>
