--- a/archives.html
+++ b/archives.html
@@ -31,6 +31,7 @@
 <h2>2013</h2>
 <h3>October</h3>
 <ul>
+  <li><a href="http://xr09.github.io/serving-static-folder-with-nginx.html">Serving Static Folder with NGINX</a></li>
   <li><a href="http://xr09.github.io/this-is-how-i-roll.html">This is how I roll</a></li>
   <li><a href="http://xr09.github.io/bash-rolodex.html">Bash Rolodex</a></li>
   <li><a href="http://xr09.github.io/sed-is-unix.html">sed is unix</a></li>
