--- a/tags.html
+++ b/tags.html
@@ -28,20 +28,20 @@
         <div class=body>
 <h1> Tags </h1>
 <ul class=tagcloud>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/bash.html">bash</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/static.html">static</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/python.html">python</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/nginx.html">nginx</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/pelican.html">pelican</a></li>
         <li class="tag-1"><a href="http://xr09.github.io/tag/unix.html">unix</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/python.html">python</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/rolodex.html">rolodex</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/nginx.html">nginx</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/sed.html">sed</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/bash.html">bash</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/pelican.html">pelican</a></li>
 </ul>
         </div>
         
 <div class=footer>
   <p>&copy; Copyright <script language="JavaScript">var date = new Date(); document.write(date.getFullYear());</script> by Manuel Gutierrez</p>
-  <p > Powered by <a href="http://pypi.python.org/pypi/pelican/" target="_blank">Pelican</a>.  
+  <p> Powered by <a href="http://pypi.python.org/pypi/pelican/" target="_blank">Pelican</a>.  
     <a href="https://github.com/fjavieralba/flasky">Theme</a>  by <a href="http://fjavieralba.com">fjavieralba</a>
   </p> 
   <p>
@@ -53,7 +53,9 @@
           document.write('<a href=\"mailto:' + u + '@' + s + '\" target=\"_blank\">');
         </script>
             <li><i class="icon-envelope icon-large"></i> </li>
-        </a>        
+        </a>
+        <a href="http://twitter.com/xr09" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
+        <a href=""><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
         <a href="http://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
         <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
       </ul>
