--- a/tags.html
+++ b/tags.html
@@ -28,14 +28,14 @@
         <div class=body>
 <h1> Tags </h1>
 <ul class=tagcloud>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/sed.html">sed</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/python.html">python</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/bash.html">bash</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/pelican.html">pelican</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/static.html">static</a></li>
         <li class="tag-1"><a href="http://xr09.github.io/tag/unix.html">unix</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/rolodex.html">rolodex</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/nginx.html">nginx</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/static.html">static</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/pelican.html">pelican</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/sed.html">sed</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/bash.html">bash</a></li>
 </ul>
         </div>
         
@@ -55,7 +55,7 @@
             <li><i class="icon-envelope icon-large"></i> </li>
         </a>
         <a href="http://twitter.com/xr09" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
-        <a href="http://www.linkedin.com/pub/manuel-enrique-gutierrez-perez/43/a31/a9"><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
+        <a href=""><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
         <a href="http://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
         <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
       </ul>
