--- a/archives.html
+++ b/archives.html
@@ -72,7 +72,7 @@
                         </time>
                         <footer>
                             <span class="categories">posted in
-                                <a class='category' href='/category/dev.html'>dev</a>
+                                <a class='category' href='/category/os.html'>os</a>
                                 
                             </span>
                         </footer>
