--- a/serving-static-folder-with-nginx.html
+++ b/serving-static-folder-with-nginx.html
@@ -74,21 +74,20 @@ chmod a+rw /var/www/static -R
 <div class=footer>
   <p>&copy; Copyright <script language="JavaScript">var date = new Date(); document.write(date.getFullYear());</script> by Manuel Gutierrez</p>
   <p> Powered by <a href="http://pypi.python.org/pypi/pelican/" target="_blank">Pelican</a>.  
-    <a href="https://github.com/fjavieralba/flasky">Theme</a>  by <a href="http://fjavieralba.com">fjavieralba</a>
   </p> 
   <p>
     <div class=social style="font-size: 27px;">
       <ul>
         <script language="JavaScript">
-          u = 'dhunterkde';
-          s = 'gmail.com';
+          u = 'mgp';
+          s = 'nauta.cu';
           document.write('<a href=\"mailto:' + u + '@' + s + '\" target=\"_blank\">');
         </script>
             <li><i class="icon-envelope icon-large"></i> </li>
         </a>
-        <a href="http://twitter.com/" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
-        <a href="http://www.linkedin.com/pub/manuel-enrique-gutierrez-perez/43/a31/a9"><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
-        <a href="http://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
+        <a href="https://twitter.com/" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
+        <a href="https://www.linkedin.com/pub/manuel-enrique-gutierrez-perez/43/a31/a9"><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
+        <a href="https://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
         <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
       </ul>
     </div>
