--- a/tags.html
+++ b/tags.html
@@ -28,48 +28,47 @@
         <div class=body>
 <h1> Tags </h1>
 <ul class=tagcloud>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/rolodex.html">rolodex</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/blog.html">blog</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/cron.html">cron</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/bash.html">bash</a></li>
-        <li class="tag-2"><a href="http://xr09.github.io/tag/debian.html">debian</a></li>
-        <li class="tag-2"><a href="http://xr09.github.io/tag/centos.html">centos</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/ubuntu.html">ubuntu</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/sed.html">sed</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/repo.html">repo</a></li>
-        <li class="tag-2"><a href="http://xr09.github.io/tag/debmirror.html">debmirror</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/.html"></a></li>
-        <li class="tag-2"><a href="http://xr09.github.io/tag/admin.html">admin</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/job.html">job</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/perl.html">perl</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/git.html">git</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/tuning.html">tuning</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/performance.html">performance</a></li>
-        <li class="tag-2"><a href="http://xr09.github.io/tag/pelican.html">pelican</a></li>
-        <li class="tag-4"><a href="http://xr09.github.io/tag/nginx.html">nginx</a></li>
-        <li class="tag-1"><a href="http://xr09.github.io/tag/unix.html">unix</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/bash.html">bash</a></li>
+        <li class="tag-2"><a href="http://xr09.github.io/tag/centos.html">centos</a></li>
         <li class="tag-4"><a href="http://xr09.github.io/tag/static.html">static</a></li>
+        <li class="tag-1"><a href="http://xr09.github.io/tag/unix.html">unix</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/nginx.html">nginx</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/tuning.html">tuning</a></li>
+        <li class="tag-2"><a href="http://xr09.github.io/tag/pelican.html">pelican</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/rolodex.html">rolodex</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/ubuntu.html">ubuntu</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/repo.html">repo</a></li>
+        <li class="tag-2"><a href="http://xr09.github.io/tag/admin.html">admin</a></li>
+        <li class="tag-2"><a href="http://xr09.github.io/tag/debmirror.html">debmirror</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/sed.html">sed</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/performance.html">performance</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/perl.html">perl</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/blog.html">blog</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/job.html">job</a></li>
+        <li class="tag-4"><a href="http://xr09.github.io/tag/.html"></a></li>
+        <li class="tag-2"><a href="http://xr09.github.io/tag/debian.html">debian</a></li>
 </ul>
         </div>
         
 <div class=footer>
   <p>&copy; Copyright <script language="JavaScript">var date = new Date(); document.write(date.getFullYear());</script> by Manuel Gutierrez</p>
   <p> Powered by <a href="http://pypi.python.org/pypi/pelican/" target="_blank">Pelican</a>.  
-    <a href="https://github.com/fjavieralba/flasky">Theme</a>  by <a href="http://fjavieralba.com">fjavieralba</a>
   </p> 
   <p>
     <div class=social style="font-size: 27px;">
       <ul>
         <script language="JavaScript">
-          u = 'dhunterkde';
-          s = 'gmail.com';
+          u = 'mgp';
+          s = 'nauta.cu';
           document.write('<a href=\"mailto:' + u + '@' + s + '\" target=\"_blank\">');
         </script>
             <li><i class="icon-envelope icon-large"></i> </li>
         </a>
-        <a href="http://twitter.com/" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
-        <a href="http://www.linkedin.com/pub/manuel-enrique-gutierrez-perez/43/a31/a9"><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
-        <a href="http://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
+        <a href="https://twitter.com/" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
+        <a href="https://www.linkedin.com/pub/manuel-enrique-gutierrez-perez/43/a31/a9"><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
+        <a href="https://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
         <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
       </ul>
     </div>
