--- a/serving-static-folder-with-nginx.html
+++ b/serving-static-folder-with-nginx.html
@@ -52,6 +52,10 @@ chmod a+rw /var/www/static -R
 <p>-q is for quiet, -O is to redirect the output and the - is an alias to std-out, this way is a shortcut for downloading <em>somescript</em> and running it with bash.</p>
 
     
+<div class=twitter>
+<a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
     <p class=tags>This entry was tagged as
       <a href="http://xr09.github.io/tag/nginx.html">nginx</a>
       <a href="http://xr09.github.io/tag/static.html">static</a>
@@ -85,7 +89,7 @@ chmod a+rw /var/www/static -R
         </script>
             <li><i class="icon-envelope icon-large"></i> </li>
         </a>
-        <a href="https://twitter.com/" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
+        <a href="https://twitter.com/xr09" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
         <a href="https://www.linkedin.com/pub/manuel-enrique-gutierrez-perez/43/a31/a9"><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
         <a href="https://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
         <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
