--- a/authors.html
+++ b/authors.html
@@ -46,7 +46,7 @@
         </script>
             <li><i class="icon-envelope icon-large"></i> </li>
         </a>
-        <a href="https://twitter.com/" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
+        <a href="https://twitter.com/xr09" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
         <a href="https://www.linkedin.com/pub/manuel-enrique-gutierrez-perez/43/a31/a9"><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
         <a href="https://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
         <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
