--- a/drafts/iaas-for-the-win.html
+++ b/drafts/iaas-for-the-win.html
@@ -34,6 +34,10 @@
 <p>With the rise of virtualization technologies (containers as well as full virt), hosting providers like Linode, Digital Ocean, Vultr and others offer enough power to deploy anything runnable on a Linux server.</p>
 
     
+<div class=twitter>
+<a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
     <p class=tags>This entry was tagged as
       <a href="http://xr09.github.io/tag/.html"></a>
     </p>
@@ -66,7 +70,7 @@
         </script>
             <li><i class="icon-envelope icon-large"></i> </li>
         </a>
-        <a href="https://twitter.com/" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
+        <a href="https://twitter.com/xr09" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
         <a href="https://www.linkedin.com/pub/manuel-enrique-gutierrez-perez/43/a31/a9"><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
         <a href="https://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
         <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
