--- a/new-admin-in-town.html
+++ b/new-admin-in-town.html
@@ -32,6 +32,10 @@
 <p>I'm trying hard to keep up the pace with my personal projects (new ideas to code), but lately bash is more common than python in my <strong>workspace</strong> folder, ain't no shame in that since bash is mandatory on every admin toolbox.</p>
 
     
+<div class=twitter>
+<a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
     <p class=tags>This entry was tagged as
       <a href="http://xr09.github.io/tag/job.html">job</a>
       <a href="http://xr09.github.io/tag/admin.html">admin</a>
@@ -65,7 +69,7 @@
         </script>
             <li><i class="icon-envelope icon-large"></i> </li>
         </a>
-        <a href="https://twitter.com/" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
+        <a href="https://twitter.com/xr09" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
         <a href="https://www.linkedin.com/pub/manuel-enrique-gutierrez-perez/43/a31/a9"><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
         <a href="https://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
         <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
