--- a/archives.html
+++ b/archives.html
@@ -26,6 +26,14 @@
 <div class=separator></div>        
         <div class=body>
     <h1> Archive </h1>
+        <h2>2017</h2>
+        <ul>
+                        <li><a href="http://xr09.github.io/use-smart-solutions.html">Use Smart Solutions</a></li>
+        </ul>
+        <h2>2015</h2>
+        <ul>
+                        <li><a href="http://xr09.github.io/2015.html">2015</a></li>
+        </ul>
         <h2>2014</h2>
         <ul>
                         <li><a href="http://xr09.github.io/ferm-iptables-the-right-way.html">Ferm - IPtables The Right Way</a></li>
