--- a/categories.html
+++ b/categories.html
@@ -29,6 +29,7 @@
     <li><a href="http://xr09.github.io/category/server.html">server</a></li>
     <li><a href="http://xr09.github.io/category/os.html">os</a></li>
     <li><a href="http://xr09.github.io/category/dev.html">dev</a></li>
+    <li><a href="http://xr09.github.io/category/brainwork.html">brainwork</a></li>
 </ul>
         </div>
         
