--- a/use-smart-solutions.html
+++ b/use-smart-solutions.html
@@ -28,7 +28,7 @@
     <h1 class="title"> Use Smart Solutions</h1>
     <p class=date> Tue 17 January 2017 </p>
     <p>I refuse to use stupid solutions. Stupid solutions wear you off, make you angry with your work, often you'll find yourself setting due-date to &quot;someday&quot; in order to avoid the hassle.</p>
-<img alt="Proffesor Farnsworth: &quot;I don wan't to live on this planet anymore&quot;" class="align-center" src="../images/proffesor.jpg" />
+<img alt="Proffesor Farnsworth: &quot;I don wan't to live on this planet anymore&quot;" class="align-center" src="../images/proffesor.jpg" style="width: 533px; height: 300px;" />
 <p>On the other side smart solutions are golden, require you to step back and think the right way, you'll learn new things, you get to enjoy the &quot;solving&quot; part and on top of that... well you get to actually solve the problem. It's a win-win situation.</p>
 <p>Say NO to repetitive tasks and use your head.</p>
 
@@ -73,5 +73,16 @@
     </div>
   </p>
 </div>    </div>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-90554639-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </body>
 </html>
